# kamokan

./: .gitmodules  CMakeLists.txt  index.html.mstch
cmake/modules/: FindSourceHighlight.cmake
config/: debug_duckbin.ini.in  debug_kamokan.ini.in  debug_tawashi.ini.in  duckbin.ini  kamokan.ini  tawashi.ini
config/nginx/: duckbin.conf  kamokan.conf  nginx.conf  tawashi.conf
config/uwsgi/: duckbin.ini  kamokan.ini  tawashi.ini
docs/: Common Gateway Interface - 1.1.txt  links.txt  source-highlight.cc
html/: error.html.mstch  head.mustache  index.html.mstch  tawashi.css  text.html  text.html.mstch  topbar.mustache
html/Pictures/template/: new-icon.xcf  save-icon.xcf  tawashi-icon.xcf  text-icon.xcf
html/templates/: edit.html.mstch  kamokan-icon-gt.xcf  kamokan-icon.xcf
html/website/: edit.html.mstch  error.html.mstch  footer.mustache  github.mustache  head.mustache  index.html.mstch  kamokan-mobile.css  kamokan.css  page1-bottom.mustache  page1-top.mustache  page2-bottom.mustache  page2-top.mustache  paste.html.mstch  pastie.html.mstch  saved.html.mstch  tawashi.css  text.html.mstch  topbar.mustache
lib/houdini/: CMakeLists.txt
lib/kakoune/kakoune/: safe_ptr.hh
oldcode/: curl_wrapper.cpp  curl_wrapper.hpp
src/: CMakeLists.txt  cgi_env.cpp  cgi_env.hpp  cgi_environment_vars.cpp  cgi_environment_vars.hpp  cgi_post.cpp  cgi_post.hpp  curl_wrapper.cpp  curl_wrapper.hpp  envy.cpp  envy.hpp  escapist.cpp  escapist.hpp  get_env.cpp  get_env.hpp  index_response.cpp  index_response.hpp  ini_file.cpp  ini_file.hpp  list_highlight_langs.cpp  list_highlight_langs.hpp  main.cpp  num_to_token.cpp  num_to_token.hpp  pastie_response.cpp  pastie_response.hpp  response.cpp  response.hpp  response_factory.cpp  response_factory.hpp  safe_stack_object.hpp  sanitized_utf8.cpp  settings_bag.cpp  settings_bag.hpp  split_get_vars.cpp  split_get_vars.hpp  submit_form_response.cpp  submit_form_response.hpp  submit_paste_response.cpp  submit_paste_response.hpp  (+1 more)
src/duckbin/: CMakeLists.txt  duckbin_config.h.in  main.cpp
src/kamokan/: CMakeLists.txt  kamokan_config.h.in  main.cpp
src/kamokan_impl/: CMakeLists.txt  add_highlighted_pastie.lua  edit_response.cpp  edit_response.hpp  error_response.cpp  error_response.hpp  general_pastie_response.cpp  general_pastie_response.hpp  highlight_functions.cpp  highlight_functions.hpp  index_response.cpp  index_response.hpp  ini_file.cpp  ini_file.hpp  list_highlight_langs.cpp  lua_scripts_for_redis.hpp  lua_to_cpp.cmake  num_to_token.cpp  pastie_response.cpp  pastie_response.hpp  pastie_retrieving_response.cpp  pastie_retrieving_response.hpp  quick_submit_paste_response.cpp  quick_submit_paste_response.hpp  redis_to_error_reason.cpp  redis_to_error_reason.hpp  response.cpp  response.hpp  response_factory.cpp  response_factory.hpp  retrieve_pastie.lua  save_pastie.lua  settings_bag.cpp  settings_bag.hpp  storage.cpp  storage.hpp  string_conv.cpp  string_conv.hpp  submit_paste_response.cpp  submit_paste_response.hpp
src/kamokan_impl/pathname/: stringpool.hpp
src/pathname/: pathname.cpp  pathname.hpp  stringpool.hpp  stringpool.inl
src/pathname/kakoune/: ref_ptr.hh  safe_ptr.hh
src/tawashi/: CMakeLists.txt  cgi_env.cpp  cgi_env.hpp  cgi_environment_vars.cpp  cgi_environment_vars.hpp  cgi_post.cpp  cgi_post.hpp  error_reasons.hpp  error_response.cpp  error_response.hpp  escapist.cpp  escapist.hpp  http_header.cpp  index_response.hpp  ini_file.hpp  ip_utils.cpp  main.cpp  mime_split.cpp  mime_split.hpp  num_conv.hpp  num_to_token.cpp  num_to_token.hpp  pastie_response.cpp  pastie_response.hpp  request_method_type.hpp  response.cpp  response.hpp  response_factory.cpp  response_factory.hpp  sanitized_utf8.cpp  sanitized_utf8.hpp  settings_bag.cpp  settings_bag.hpp  spdlog.hpp  split_get_vars.cpp  split_get_vars.hpp  storage.cpp  storage.hpp  string_lengths.hpp  submit_paste_response.cpp  (+10 more)
src/tawashi/pathname/: pathname.cpp  pathname.hpp
src/tawashi_implem/: CMakeLists.txt  cgi_env.cpp  cgi_env.hpp  cgi_environment_vars.cpp  cgi_environment_vars.hpp  cgi_post.cpp  cgi_post.hpp  error_reasons.hpp  error_response.cpp  escapist.hpp  http_header.cpp  http_header.hpp  index_response.cpp  index_response.hpp  ini_file.cpp  ini_file.hpp  ip_utils.cpp  ip_utils.hpp  logger.hpp  logging_levels.hpp  mime_split.cpp  mime_split.hpp  pastie_response.cpp  pastie_response.hpp  quick_submit_paste_response.cpp  quick_submit_paste_response.hpp  response.cpp  response.hpp  response_factory.cpp  response_factory.hpp  safe_stack_object.hpp  sanitized_utf8.hpp  settings_bag.cpp  string_lengths.hpp  submit_paste_response.cpp  submit_paste_response.hpp  tawashi_exception.hpp
test/data/: UTF-8-test.txt.c
test/simulation/: CMakeLists.txt  check.cpp  fake_storage.cpp  fake_storage.hpp  num_to_token.hpp  simulation_config.h.in  test_index_response.cpp  test_submit_pastie.cpp
test/unit/: CMakeLists.txt  fake_cgi_env.cpp  fake_cgi_env.hpp  test_html_escape.cpp  test_index_response.cpp  test_ini_file.cpp  test_invalid_utf8_get.cpp  test_invalid_utf8_post.cpp  test_mime_split.cpp  test_settings_bag.cpp
